--- a/config.yaml
+++ b/config.yaml
@@ -70,15 +70,18 @@ MACROS:
         location: [200, 150]
         orientation: "N"
       mem_inst1:
-        location: [800, 150]
+        location: [900, 150]
         orientation: "N"
     gds: [dir::src/mem/sky130_sram_1kbyte_1rw1r_32x256_8.gds]
     lef: [dir::src/mem/sky130_sram_1kbyte_1rw1r_32x256_8.lef]
     lib: 
       "*": [dir::src/mem/sky130_sram_1kbyte_1rw1r_32x256_8_TT_1p8V_25C.lib]
 
+
+# IMPORTANT FIX
 # This will only run one corner. Good for exploration, but not full sign-off!
-#STA_CORNERS: [nom_tt_025C_1v80]
+STA_CORNERS: [nom_tt_025C_1v80]
+
 PDN_MACRO_CONNECTIONS: ["mem_inst0 vccd1 vssd1 vccd1 vssd1", "mem_inst1 vccd1 vssd1 vccd1 vssd1"]
 VERILOG_POWER_DEFINE: USE_POWER_PINS
 ERROR_ON_PDN_VIOLATIONS: false
@@ -119,14 +122,31 @@ FP_PDN_SKIPTRIM: true
 # FP_MACRO_VERTICAL_HALO: 30
 
 # Resizer configuration for hold fixing
-PL_RESIZER_HOLD_SLACK_MARGIN: 0.1  # Increased from default
-PL_RESIZER_SETUP_SLACK_MARGIN: 0.05
+# PL_RESIZER_HOLD_SLACK_MARGIN: 1.2  # Increased from default
+# PL_RESIZER_HOLD_MAX_BUFFER_PERCENT: 100  # Allow more hold buffers
+# PL_RESIZER_SETUP_SLACK_MARGIN: 0.2
 
 # Resizer steps configuration
-PL_RESIZER_MAX_SLEW_MARGIN: 20  # More margin for max transition fixing
-PL_RESIZER_MAX_CAP_MARGIN: 20   # More margin for max cap fixing
-GLB_RESIZER_MAX_SLEW_MARGIN: 10 # For post-route fixing
-GLB_RESIZER_MAX_CAP_MARGIN: 10  # For post-route fixing
+# PL_RESIZER_MAX_SLEW_MARGIN: 20  # More margin for max transition fixing
+# PL_RESIZER_MAX_CAP_MARGIN: 20   # More margin for max cap fixing
+# GLB_RESIZER_MAX_SLEW_MARGIN: 20 # For post-route fixing
+# GLB_RESIZER_MAX_CAP_MARGIN: 20  # For post-route fixing
+# GLB_RESIZER_HOLD_MAX_BUFFER_PERCENT: 100
 
-PL_RESIZER_HOLD_MAX_BUFFER_PERCENT: 100  # Allow more hold buffers
-GLB_RESIZER_HOLD_MAX_BUFFER_PERCENT: 100  # Allow more post-route buffers
+PL_RESIZER_HOLD_SLACK_MARGIN: 1.3
+GRT_RESIZER_HOLD_SLACK_MARGIN: 1.3
+PL_RESIZER_ALLOW_SETUP_VIOS: True
+GRT_RESIZER_ALLOW_SETUP_VIOS: True
+RUN_POST_GRT_RESIZER_TIMING: True
+
+# below 100
+PL_RESIZER_MAX_SLEW_MARGIN: 75  # More margin for max transition fixing
+PL_RESIZER_MAX_CAP_MARGIN: 75   # More margin for max cap fixing
+GLB_RESIZER_MAX_SLEW_MARGIN: 75 # For post-route fixing
+GLB_RESIZER_MAX_CAP_MARGIN: 75  # For post-route fixing
+
+# more parameter for density
+# default around 50 -- reduce it 
+
+
+
