deleted density, relaxed FP_COR UTIL to 30, run on all corners

--- a/config-improved2.yaml
+++ b/config-improved2.yaml
@@ -44,7 +44,7 @@ ERROR_ON_SYNTH_CHECKS: false
 MAGIC_WRITE_LEF_PINONLY: true
 CLOCK_PERIOD: 40
 CLOCK_PORT: clk_i
-FP_CORE_UTIL: 40
+FP_CORE_UTIL: 30
 
 # Must create base.sdc
 PNR_SDC_FILE: dir::base.sdc
@@ -156,8 +156,8 @@ FP_PDN_SKIPTRIM: true
 # SYNTH_BUFFERING: true
 # SYNTH_SIZING: true
 
-PL_TARGET_DENSITY: 0.55
-FP_ASPECT_RATIO: 0.6
+# PL_TARGET_DENSITY: 0.55
+FP_ASPECT_RATIO: 0.65
 # DIE_AREA: [0, 0, 1200, 1000]
 # CORE_AREA: [100, 100, 1100, 900]
 
