--- a/config-improved1.yaml
+++ b/config-improved1.yaml
@@ -44,7 +44,7 @@ ERROR_ON_SYNTH_CHECKS: false
 MAGIC_WRITE_LEF_PINONLY: true
 CLOCK_PERIOD: 100
 CLOCK_PORT: clk_i
-FP_CORE_UTIL: 40
+FP_CORE_UTIL: 30
 
 # Must create base.sdc
 PNR_SDC_FILE: dir::base.sdc
@@ -78,7 +78,7 @@ MACROS:
       "*": [dir::src/mem/sky130_sram_1kbyte_1rw1r_32x256_8_TT_1p8V_25C.lib]
 
 # This will only run one corner. Good for exploration, but not full sign-off!
-STA_CORNERS: [nom_tt_025C_1v80]
+# STA_CORNERS: [nom_tt_025C_1v80]
 # STA_CORNERS: [nom_ss_100C_1v60]
 PDN_MACRO_CONNECTIONS: ["mem_inst0 vccd1 vssd1 vccd1 vssd1", "mem_inst1 vccd1 vssd1 vccd1 vssd1"]
 VERILOG_POWER_DEFINE: USE_POWER_PINS
@@ -156,8 +156,8 @@ FP_PDN_SKIPTRIM: true
 # SYNTH_BUFFERING: true
 # SYNTH_SIZING: true
 
-PL_TARGET_DENSITY: 0.55
-FP_ASPECT_RATIO: 0.6
+# PL_TARGET_DENSITY: 0.55
+FP_ASPECT_RATIO: 0.65
 # DIE_AREA: [0, 0, 1200, 1000]
 # CORE_AREA: [100, 100, 1100, 900]
 
